<?xml version="1.0"?>
<package format="2">
  <name>rosflight_unity</name>
  <version>0.0.0</version>
  <description>ROSflight bindings for Unity software-in-the-loop simulation</description>

  <maintainer email="parkerclusk@gmail.com">Parker Lusk</maintainer>
  <license>MIT</license>
  <url type="website">http://github.com/plusk01/rosflight_unity</url>


  <depend>roscpp</depend>
  <depend>rosflight_firmware</depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
